--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>SuperProduct</title>
@@ -7,7 +8,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body class="bg-white dark:bg-black">
   <app-root></app-root>
+  <script>
+    const theme = localStorage.getItem('theme');
+    const browserDark = window.matchMedia('(prefers-color-scheme: dark)').matches; if (theme !== null) {
+      if (theme === 'dark') {
+        document.documentElement.classList.add('dark');
+      }
+    } else if (browserDark) {
+      document.documentElement.classList.add('dark');
+    }
+  </script>
 </body>
+
 </html>
