--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body class="bg-white dark:bg-black">
   <app-root></app-root>
   <script>
     const theme = localStorage.getItem('theme');
-    const browserDark = window.matchMedia('(prefers-color-scheme: dark)').matches; if (theme !== null) {
+    const browserDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    if (theme !== null) {
       if (theme === 'dark') {
         document.documentElement.classList.add('dark');
       }
