--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SuperProduct</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link id="appIcon" rel="icon" type="image/x-icon" href="logo_tdt.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body class="bg-white dark:bg-black">
   <app-root></app-root>
   <script>
-    (function() {
+    (function () {
       try {
         const theme = localStorage.getItem('theme');
         const browserDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
