feat: Refactor authentication and storage services
- Implemented session storage methods in StorageService.
- Updated HeaderComponent to utilize AuthService for user authentication status.
- Added authGuard and guestGuard for route protection.
- Refactored AuthService to use Angular signals for user state management.
- Created UserService for user profile management.
- Enhanced LoginComponent to handle login errors more gracefully.
- Updated SettingsComponent to improve language selection and loading states.
- Introduced a new authController for handling authentication requests on the server side.
- Updated server.ts to streamline API request handling.
- Added meta tags for theme color and description in index.html.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="Super Product - Angular Application">
   <link id="appIcon" rel="icon" type="image/x-icon" href="logo_tdt.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
